@@ -1,3 +1,10 @@
+Thu Aug 11 13:30:07 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/ProjectCreator.pm:
+
+          Fixed a bug where a directory used as input for a custom file type
+          would not result in any input files when automatic is set to zero.
+
 Thu Aug 11 06:42:33 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * README:
